# simple_code

./: .gitignore  .vimspector.json  CMakeLists.txt  README  casting.cpp  class_and_method.cpp  crtp_factory.cpp  linked_list.cpp  merge_sorted.cpp  misc.cpp  nv_ll.cpp  nv_ll.in  ptr_access.cpp  reverse_bench.pl  simple_increment.cpp  strange_cast.cpp  string_switch.cpp  word_score.pl  word_score.pl5
FizzBuzz/: FizzBuzz.cpp  FizzBuzz.pl
atoi/: CMakeLists.txt  atoi.cpp
bi_map/: CMakeLists.txt  bi_map.hpp  hw_01.cpp
cdx_tree/: CMakeLists.txt  Makefile.am  README.md  configure.ac  debug_bld.sh
cdx_tree/exe/: Makefile.am  tree.cpp
cdx_tree/src/: Makefile.am  tree_thing.cpp  tree_thing.h
cdx_tree/tests/: Makefile.am  main.cpp
cmake_dep/: CMakeLists.txt
cmake_dep/myexe/: CMakeLists.txt  main.cpp
cmake_dep/mylib/: CMakeLists.txt
dedup/: dedup.cpp
djb_hash/: hash.cpp
fib/: fib.cpp  fib.pl
fizz_buzz/: fizz_buzz.cpp
get_my_ip/: GNUMakefile  get_ip.cpp
hex_to/: hex_to.cpp
include_test/: a.out  main.cpp
include_test/include/: b.h
include_test/include/new_api/: a.h  b.h
max_sublist/: max_sublist.cpp
namespace_thing/: test.cpp
other/: up.cpp  up_char_ret.cpp
rev_words/: rev_words.cpp  rev_words.pl
ripple/: CMakeLists.txt  bi_map.hpp  tests.cpp
simple_hash_table/: CMakeLists.txt  hash_table.hpp  tests.cpp
sum_bin/: CMakeLists.txt  Makefile  sum_bin.cpp  sum_bin.hpp  test_main.cpp
tic_tac_toe/: CMakeLists.txt  game.cpp  game.h  main.cpp  tests.cpp
worker_thread/: worker.cpp
